2008-09-05  David Daney  <ddaney@avtrex.com>

	* doc/install.texi (--enable-reduced-reflection): Document new option.

2008-09-05  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/predicates.md (nonimmed_operand, mem_operand): Use
	constantpool_mem_p.
	(constantpool_operand): New.
	(move_operand): Disallow sub-word modes for the constant pool.
	* config/xtensa/xtensa.c (TARGET_SECONDARY_RELOAD): Define.
	(xtensa_secondary_reload_class): Replace with....
	(xtensa_secondary_reload): this function.  Remove SIGN_EXTEND check. 
	Set icode for sub-word reloads from the constant pool.
	* config/xtensa/xtensa.h (SECONDARY_INPUT_RELOAD_CLASS): Delete.
	(SECONDARY_OUTPUT_RELOAD_CLASS): Delete.
	* config/xtensa/xtensa.md (reload<mode>_literal): New.
	* config/xtensa/xtensa-protos.h: Update prototypes.
	
2008-09-05  Joseph Myers  <joseph@codesourcery.com>

	* config/mips/mips.h (enum reg_class): Add FRAME_REGS.
	(REG_CLASS_NAMES): Update.
	(REG_CLASS_CONTENTS): Update.
	* config/mips/mips.c (mips_regno_to_class): Use FRAME_REGS instead
	of ALL_REGS for regs 77 and 78.
	* function.c (instantiate_virtual_regs_in_insn): Assert that
	return value of simplify_gen_subreg is not NULL.

2008-09-05  Paolo Bonzini  <bonzini@gnu.org>

	* emit-rtl.c (gen_rtvec): Rewrite not using gen_rtvec_v.
	(gen_rtvec_v): Fix coding standards.

2008-09-04  Jan Hubicka  <jh@suse.cz>

	* i386.c (decide_alg): Be more conservative about optimizing for size.

2008-09-04  Ian Lance Taylor  <iant@google.com>

	* varasm.c (narrowing_initializer_constant_valid_p): New
	static function.
	(initializer_constant_valid_p): Call it.

2008-09-04  Jeff Law  <law@redhat.com>

	* fold-const.c (native_encode_real): Fix computation of WORDS.
	(native_interpret_real): Likewise.

2008-09-04  Janis Johnson  <janis187@us.ibm.com>

	* config/rs6000/t-rs6000: Remove target gt-rs6000.h.

2008-09-04  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-conflicts.c (process_regs_for_copy): Check insn to check